# ucert

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  ucert.c  usign-exec.c  usign.h
tests/: CMakeLists.txt
tests/cram/: CMakeLists.txt  test_ucert.t
